--- a/src/style.scss
+++ b/src/style.scss
@@ -6,7 +6,7 @@
  */
 
 .wp-block-stl-renderer-stl-renderer {
-	background-color: #21759b;
+	//background-color: #21759b;
 	color: #fff;
 	padding: 2px;
 }
