--- a/src/style.scss
+++ b/src/style.scss
@@ -5,8 +5,7 @@
  * Replace them with your own styles or remove the file completely.
  */
 
-.wp-block-stl-renderer-stl-renderer {
-	//background-color: #21759b;
-	color: #000;
-	padding: 2px;
-}
+//.wp-block-stl-renderer-stl-renderer {
+//  border: 1px dotted #000000;
+//  color: black;
+//}
