update editor options

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -14,6 +14,7 @@
 }
 
 .wp-block-stl-renderer-stl-preview {
-  width: 500px;
-  height: 500px;
+  //width: 500px;
+  //height: 500px;
+  border: 1px solid black;
 }
